# formant

./: .gitignore  CMakeLists.txt  README.md  fft_mayer.c  formant~.c  formant~.help  formant~v0.9.c  formant~version05.c  slm1.c  slm1.h  trigtbl.h
CVS/: Entries  Repository
distrib/: formant~.maxhelp
distrib/formant~.mxo/Contents/: Info.plist
distrib/formant~.mxo/Contents/MacOS/: formant~
formant~.mxo/Contents/MacOS/: formant~
formant~.mxo/Contents/Resources/: Info.plist  maxmspsdk.xcconfig
